*) New: Player profile has new facebook field /hls_set facebook url
*) New: Player profile has new jabber field /hls_set jabber url
*) New: Player profile has new steamprofile field /hls_set steamprofile url
*) New: Steam profile page lookup via SteamID. BCmath support (PHP) is needed.
	http://www.php.net/manual/en/book.bc.php
*) New: Clan Profile can new enter a steam group URL
*) Changed: Host statistics in admin disabled. New version will include this again.
*) Changed: Constant INCLUDE_PATH removed.
*) Changed: hlstats.php file renamed to index.php
				scripturl option has been removed.
*) Changed: sorting pictures renamed
*) Changed: replaced AMCharts with pChart
*) Changed: Information about real kills removed
*) Changed: hls_set options cleanup
*) Fixed: typo in lang (thx to LuBJe)
*) Fixed: bug in admin -> Tools -> Reset (thx to conan)
*) Fixed: remove the ; in rcon commands (thx to Par0noid)


1.51 (2009-11-23)
*) New: HLStats can now be translated via ini files. The default language
		is set in the hlstats.conf.php file. Update the configuration !
		Help and some graphics are still missing
*) New: Visitors can now change the language of the web content via cookies
*) New: Player are now seperated into "active" and "inactive" Players
		The players which have now activity (skill change) in a given timeframe
		are set to inactive and will not be show in players overview.
*) New: Role pictures in player info page if available.
*) Updated: Display of the awards and more stuff (thx to freaker and someone)
*) Updated: Ignore BOT option ignores everything which has BOT as unique ID
*) Updated: Dod Role and map pictures.
*) Updated: TF2 Weapon pics
*) Changed: Period for event deletion in hlstats.pl increased.
*) Changed: import-tools.sh removed (can be found in the docs now)
*) Changed: HLstats is now HLStats
*) Chnaged: Moved functions from hlstats.pl to HLstats.plib
*) Changed: hlstats.conf is now hlstats.conf.ini and uses the ini format.