@@ -234,7 +234,7 @@ $rcol = "row-dark";
 			<td>
 				<?php if ($playerObj->getParam("clan")) { ?>
 					<a href="index.php?mode=claninfo&clan=<?php echo $playerObj->getParam("clan"); ?>">
-					<img src="<?php echo $g_options['imgdir']; ?>/clan.gif" width="16" height="16" hspace="4"
+					<img src="hlstatsimg/clan.gif" width="16" height="16" hspace="4"
 							border="0" align="middle" alt="clan.gif" />
 					<?php echo makeSavePlayerName($playerObj->getParam("clan_name")); ?>
 					</a>
